overflow-mask little fix

--- a/src/components/book-card/book-card.module.css
+++ b/src/components/book-card/book-card.module.css
@@ -24,6 +24,8 @@
 
 .title{
   padding-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .genres{
