--- a/src/components/overflow-mask/overflow-mask.module.css
+++ b/src/components/overflow-mask/overflow-mask.module.css
@@ -6,5 +6,6 @@
   top: 0;
   left: 0;
   background: rgb(255,255,255);
-  background: linear-gradient(180deg,rgba(255,255,255,0) 0%, rgba(0,0,0,0) 87%, rgba(0,0,0,1) 97%);
+  /*background: linear-gradient(180deg,rgba(255,255,255,0) 0%, rgba(0,0,0,0) 87%, rgba(0,0,0,1) 97%);*/
+  background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0) 87%, rgba(30,30,30,1) 97%);
 }
